@@ -13,13 +13,13 @@
 
 .. automodule:: formex
    :synopsis: Formex algebra in Python
-   :members: vectorLength,vectorNormalize,vectorPairAreaNormals,vectorPairArea,vectorPairNormals,vectorTripleProduct,polygonNormals,pattern,mpattern,intersectionWithPlane,pointsAt,intersectionPointsWithPlane,intersectionLinesWithPlane,cut2AtPlane,cut3AtPlane,cutElements3AtPlane,connect,interpolate
+   :members: vectorLength,vectorNormalize,vectorPairAreaNormals,vectorPairArea,vectorPairNormals,vectorTripleProduct,polygonNormals,pattern,mpattern,pointsAt,intersectionLinesWithPlane,cut2AtPlane,cut3AtPlane,cutElements3AtPlane,connect,interpolate
 
    ``Classes defined in module formex``
 
 
    .. autoclass:: Formex
-      :members: element,point,coord,nelems,nplex,ndim,npoints,shape,view,getProp,maxProp,propSet,centroids,fuse,toMesh,info,asFormex,asFormexWithProp,asArray,fprint,setProp,append,select,selectNodes,points,vertices,remove,whereProp,withProp,splitProp,elbbox,unique,reverse,test,clip,cclip,mirror,centered,resized,circulize,circulize1,shrink,replicate,replic,replic2,rosette,translatem,extrude,divide,intersectionWithPlane,intersectionPointsWithPlane,intersectionLinesWithPlane,cutWithPlane,split,write,actor
+      :members: element,point,coord,nelems,nplex,ndim,npoints,shape,view,getProp,maxProp,propSet,centroids,fuse,toMesh,info,asFormex,asFormexWithProp,asArray,fprint,setProp,append,select,cselect,selectNodes,points,vertices,remove,whereProp,withProp,splitProp,elbbox,unique,reverse,test,clip,cclip,mirror,centered,resized,circulize,circulize1,shrink,replicate,replic,replic2,rosette,translatem,extrude,divide,intersectionWithPlane,cutWithPlane,split,write,actor
 
    ``Functions defined in module formex`` 
 
